src/objects/JE_Job_Evaluation__c.object
<CustomObject>
    <description>Used as part of the Unilever Job Evaluation POC</description>
    <fields>
        <fullName>Advertising_Promotion_Comments__c</fullName>
        <label>Advertising &amp; Promotion Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advertising_Promotion_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Advertising_Promotions_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertising &amp; Promotion Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertising_Promotion_Score__c</fullName>
        <formula>CASE( RecordTypeId , &quot;012E0000000654M&quot;,CASE( Advertising_Promotion__c , &quot;Up to 1.5M&quot;, 1, &quot;1.5M - 5M&quot;, 2, &quot;5M - 20M&quot;, 3, &quot;20M - 80M&quot;, 4, &quot;More Than 80M&quot;,5,0),
CASE( RecordTypeId , &quot;012E0000000654N&quot;,CASE( Advertising_Promotion__c , &quot;0 to 350k Euros&quot;, 1, &quot;351 to 500k Euros&quot;, 2, &quot;500k to 1.5M Euros&quot;, 3, &quot;1.5M to 5M Euros&quot;, 4, &quot;More than 5M Euros&quot;,5,0),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertising &amp; Promotion Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertising_Promotion_Weighted_Score__c</fullName>
        <formula>Advertising_Promotion_Score__c  *   Advertising_Promotion_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertising &amp; Promotion Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertising_Promotion__c</fullName>
        <label>Advertising &amp; Promotion</label>
        <picklist>
            <picklistValues>
                <fullName>Up to 1.5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5M - 5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5M - 20M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20M - 80M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 80M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 to 350k Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351 to 500k Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500k to 1.5M Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5M to 5M Euros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5M Euros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Revised_Grade__c</fullName>
        <formula>Final_Recommendation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Revised Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Comments__c</fullName>
        <label>Change Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Change_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Score_Workflow__c</fullName>
        <label>Change Score Workflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Score__c</fullName>
        <formula>CASE( Change__c , &quot;Looks for higher levels of performance from existing products, systems and processes.&quot;, 0.5, &quot;Decision-making involves the use of judgment and there is an emphasis on the development of new/improved procedures and on the translation of policy into operational plans.&quot;, 1,&quot;Makes self fully-available to partners to extend capacity to improve and develop higher quality systems and processes. Initiates ways of adding value and containing costs.&quot;,1.5,&quot;Thinking is towards clearly defined objectives within established policy frameworks, but requires solutions that represent improvements on current practice (direct development of new procedures).&quot;,2.85,&quot;Enhances approaches to foster change and innovation consistent with the corporate vision&quot;,3.5,&quot;Evaluates and constructs solutions to variable situations within general policies and broadly defined organizational goals.&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Weighted_Score__c</fullName>
        <formula>Change_Score_Workflow__c  *   Change_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <label>Change</label>
        <picklist>
            <picklistValues>
                <fullName>Looks for higher levels of performance from existing products, systems and processes.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision-making involves the use of judgment and there is an emphasis on the development of new/improved procedures and on the translation of policy into operational plans.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Makes self fully-available to partners to extend capacity to improve and develop higher quality systems and processes. Initiates ways of adding value and containing costs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thinking is towards clearly defined objectives within established policy frameworks, but requires solutions that represent improvements on current practice (direct development of new procedures).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhances approaches to foster change and innovation consistent with the corporate vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluates and constructs solutions to variable situations within general policies and broadly defined organizational goals.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMET &amp; RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Cluster__c</controllingField>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cote D&apos;Ivoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Level__c</fullName>
        <label>Current Level</label>
        <picklist>
            <picklistValues>
                <fullName>WL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Evaluation__c</fullName>
        <label>Date of Last Evaluation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Recommendation__c</fullName>
        <label>Final Recommendation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <controllingField>Pillar__c</controllingField>
            <picklistValues>
                <fullName>Brand Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geographic_Scope_Comments__c</fullName>
        <label>Geographic Scope Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_Scope_Score__c</fullName>
        <formula>CASE( RecordTypeId , &quot;012E0000000654M&quot;, CASE( Geographic_Scope__c , &quot;Operating Country&quot;, 1, &quot;MCO&quot;, 3, &quot;Cluster&quot;, 5,0),
CASE( RecordTypeId , &quot;012E0000000654N&quot;, CASE( Geographic_Scope__c , &quot;Operating Country&quot;, 1, &quot;MCO&quot;, 2, &quot;Cluster&quot;, 3, &quot;Multi-Cluster&quot;, 4, &quot;Global&quot;,5,0),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geographic Scope Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geographic_Scope_Weighted_Score__c</fullName>
        <formula>Geographic_Scope_Score__c  *   Geogrpahic_Scope_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geographic Scope Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geographic_Scope__c</fullName>
        <label>Geographic Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Operating Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geogrpahic_Scope_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Geogrpahic_Scope_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geogrpahic Scope Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Comments__c</fullName>
        <label>Gross Margin Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Gross_Margin_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Score__c</fullName>
        <formula>CASE( Gross_Margin__c , &quot;0 - 6M&quot;, 1, &quot;6M - 30M&quot;, 2, &quot;30M - 60M&quot;, 3, &quot;60M-100M&quot;, 4, &quot;100M+&quot;, 5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Weighted_Score__c</fullName>
        <formula>Gross_Margin_Score__c  *   Gross_Margin_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 6M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6M - 30M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30M - 60M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60M-100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100M+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_L_ship_Team_Comments__c</fullName>
        <label>Highest LT Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Highest_L_ship_Team_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Highest_L_ship_Team_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest L&apos;ship Team Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highest_L_ship_Team_to_S_holder_Manage__c</fullName>
        <label>Highest LT to Stakeholder Manage</label>
        <picklist>
            <picklistValues>
                <fullName>WL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WL4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WL5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WL5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_L_ship_Team_to_S_holder_Score__c</fullName>
        <formula>CASE( Highest_L_ship_Team_to_S_holder_Manage__c , &quot;WL3&quot;, 1, &quot;WL4&quot;,3, &quot;WL5&quot;, 5, &quot;WL5+&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest L&apos;ship Team to S&apos;holder Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Highest_L_ship_Team_to_S_holder_Wei_Scor__c</fullName>
        <formula>Highest_L_ship_Team_to_S_holder_Score__c  *   Highest_L_ship_Team_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest L&apos;ship Team to S&apos;holder Wei Scor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ideal__c</fullName>
        <label>Ideal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Impact_of_The_Decision_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Impact_of_The_Decision_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact of The Decision Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_of_The_Decision_Weighted_Score__c</fullName>
        <formula>Impact_of_The_Decisions_Score__c * Impact_of_The_Decision_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact of The Decision Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_of_The_Decisions_Comments__c</fullName>
        <label>Impact of Decisions Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_of_The_Decisions_Score__c</fullName>
        <formula>CASE( Impact_of_The_Decisions__c , &quot;0 - 1 year&quot;, 1, &quot;1 -2 years&quot;, 2, &quot;2-3 years&quot;,4, &quot;More than 3 years&quot;, 5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact of The Decisions Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_of_The_Decisions__c</fullName>
        <label>Impact of Decisions</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 -2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Importance_of_Key_Account_s_Comments__c</fullName>
        <label>Importance of Key Account/s Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Importance_of_Key_Account_s_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.importance_of_Key_Account_s_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importance of Key Account/s Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importance_of_Key_Account_s_Score__c</fullName>
        <formula>CASE( Importance_of_Key_Account_s__c , &quot;Low &amp; Medium&quot;, 1, &quot;Medium &amp; High&quot;, 3, &quot;High&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importance of Key Account/s Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importance_of_Key_Account_s_Weight_Score__c</fullName>
        <formula>Importance_of_Key_Account_s_Score__c * Importance_of_Key_Account_s_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importance of Key Account/s Weight Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importance_of_Key_Account_s__c</fullName>
        <label>Importance of Key Account/s</label>
        <picklist>
            <picklistValues>
                <fullName>Low &amp; Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium &amp; High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indirects_to_Be_Managed_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Indirects_to_Be_Managed_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirects to Be Managed Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirects_to_Be_Managed_Score__c</fullName>
        <formula>CASE( Indirects_to_Be_Managed__c , &quot;&lt;2%&quot;, 1, &quot;2.1 - 3.0%&quot;, 2, &quot;3.1 - 5%&quot;,3, &quot;5.1 - 7%&quot;,4, &quot;Above 7%&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirects to Be Managed Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirects_to_Be_Managed__c</fullName>
        <label>Indirects to Be Managed</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;2%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 - 3.0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 - 5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 - 7%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above 7%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influence_in_Decision_Making_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Influence_in_Decision_Making_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence in Decision Making Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Influence_in_Decision_Making_Process__c</fullName>
        <label>Influence in Decision Making Process</label>
        <picklist>
            <picklistValues>
                <fullName>Own function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-functions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional &amp; cross-functional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global &amp; cross-functional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influence_in_Decision_Making_Score__c</fullName>
        <formula>CASE( Influence_in_Decision_Making_Process__c , &quot;Own function&quot;, 1, &quot;Cross-functions&quot;, 2, &quot;Regional &amp; cross-functional&quot;, 4, &quot;Global &amp; cross-functional&quot;, 5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence in Decision Making Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Influence_in_Decison_Making_Process_Comm__c</fullName>
        <label>Influence in Decision Making Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Influence_in_Decsion_Making_Weight_Score__c</fullName>
        <formula>Influence_in_Decision_Making_Score__c  *   Influence_in_Decision_Making_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Influence in Decsion Making Weight Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Evaluation_Multiplier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>JE Job Evaluation Multipliers</label>
        <referenceTo>JE_Job_Evaluation_Multipliers__c</referenceTo>
        <relationshipLabel>JE Job Evaluations</relationshipLabel>
        <relationshipName>JE_Job_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Evaluation_Type__c</fullName>
        <label>Job Evaluation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Grade_of_Line_Manager_Score__c</fullName>
        <formula>CASE( RecordTypeId , &quot;012E0000000654M&quot;,CASE( Job_Grade_of_Line_Manager__c  , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12,0),
CASE( RecordTypeId , &quot;012E0000000654N&quot;,CASE( Job_Grade_of_Line_Manager__c , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12,0),
CASE( RecordTypeId , &quot;012E0000000654O&quot;,CASE( Job_Grade_of_Line_Manager__c , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12,0),
CASE( RecordTypeId , &quot;012E0000000654P&quot;,CASE( Job_Grade_of_Line_Manager__c , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12,0),
CASE( RecordTypeId , &quot;012E0000000654Q&quot;,CASE( Job_Grade_of_Line_Manager__c , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12, &quot;6&quot;,14,0),
CASE( RecordTypeId , &quot;012E0000000654R&quot;,CASE( Job_Grade_of_Line_Manager__c , &quot;2A&quot;, 1, &quot;2B&quot;, 2, &quot;2C&quot;, 3, &quot;3A&quot;, 5, &quot;3B&quot;, 6, &quot;4A&quot;, 8, &quot;4B&quot;, 9, &quot;5A&quot;,11, &quot;5B&quot;,12,0),0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Grade of Line Manager Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Grade_of_Line_Manager_Workflow__c</fullName>
        <label>Job Grade of Line Manager Workflow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Grade_of_Line_Manager__c</fullName>
        <label>Job Grade of Line Manager</label>
        <picklist>
            <picklistValues>
                <fullName>WL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Key_Account_Contact_Comments__c</fullName>
        <label>Level of Key Account Contact Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Key_Account_Contact_Multiplier__c</fullName>
        <formula>Job_Evaluation_Multiplier__r.Level_of_Key_Account_Contact_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Key Account Contact Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Key_Account_Contact_Score__c</fullName>
        <formula>CASE( Level_of_Key_Account_Contact__c , &quot;Manager&quot;, 1, &quot;Director&quot;, 2, &quot;VP&quot;, 3, &quot;Higher than VP&quot;,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Key Account Contact Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Key_Account_Contact_Weight_Scor__c</fullName>
        <formula>Level_of_Key_Account_Contact_Score__c * Level_of_Key_Account_Contact_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level of Key Account Contact Weight Scor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>